Fixed alignment issue in bio section.

--- a/css/style.css
+++ b/css/style.css
@@ -15,7 +15,7 @@ a {
   color: inherit;
 }
 
-#descriptionWrapper, #nameWrapper, .detailLabel, h3 {
+#descriptionWrapper, #nameWrapper, .detailLabel {
   display: -webkit-box;
   display: -webkit-flex;
   display: -ms-flexbox;
@@ -217,13 +217,14 @@ section {
 h3 {
   font-size: 1.5vw;
   line-height: 1.6vw;
+  font-family: 'Lato', sans-serif;
 }
 
 #biography {
   font-family: 'Lora', serif;
   font-size: 1vw;
-  line-height: 1.5em;
-  padding-top: 1.5em;
+  line-height: 1.5vw;
+  padding-top: 1.5vw;
 
   width: 700px;
 }
